feat: implement build options
